--- a/src/ResourceManager/Sql/Commands.Sql.Test/Commands.Sql.Test.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql.Test/Commands.Sql.Test.csproj
@@ -1,26 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build"
-  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\..\..\packages\xunit.runner.visualstudio.2.1.0\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="..\..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props" Condition="Exists('..\..\..\packages\xunit.core.2.1.0\build\portable-net45+win8+wp8+wpa81\xunit.core.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-<ProjectGuid>{56ED8C97-53B9-4DF6-ACB5-7E6800105BF8}</ProjectGuid>
-<OutputType>Library</OutputType>
-<AppDesignerFolder>Properties</AppDesignerFolder>
-<RootNamespace>Microsoft.Azure.Commands.Sql.Test</RootNamespace>
-<AssemblyName>Microsoft.Azure.Commands.Sql.Test</AssemblyName>
-<TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-<FileAlignment>512</FileAlignment>
-<TargetFrameworkProfile />
-<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
-<RestorePackages>true</RestorePackages>
-<CodeAnalysisAdditionalOptions>/assemblyCompareMode:StrongNameIgnoringVersion</CodeAnalysisAdditionalOptions>
-<NuGetPackageImportStamp>b014b9b4</NuGetPackageImportStamp>
-</PropertyGroup>
-<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{56ED8C97-53B9-4DF6-ACB5-7E6800105BF8}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Microsoft.Azure.Commands.Sql.Test</RootNamespace>
+    <AssemblyName>Microsoft.Azure.Commands.Sql.Test</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
+    <CodeAnalysisAdditionalOptions>/assemblyCompareMode:StrongNameIgnoringVersion</CodeAnalysisAdditionalOptions>
+    <NuGetPackageImportStamp>b014b9b4</NuGetPackageImportStamp>
+  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
       <SignAssembly>true</SignAssembly>
       <AssemblyOriginatorKeyFile>..\MSSharedLibKey.snk</AssemblyOriginatorKeyFile>
       <DelaySign>true</DelaySign>
@@ -279,27 +278,27 @@
       <None Include="ScenarioTests\ImportExportTests.ps1">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-    <None Include="ScenarioTests\ElasticJobAgentCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobCredentialCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobExecutionCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobStepCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobTargetGroupCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="ScenarioTests\ElasticJobTargetCrudTests.ps1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+      <None Include="ScenarioTests\ElasticJobAgentCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobCredentialCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobExecutionCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobStepCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobTargetGroupCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Include="ScenarioTests\ElasticJobTargetCrudTests.ps1">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <Compile Include="ScenarioTests\LocationCapabilitiesTests.cs" />
       <Compile Include="ScenarioTests\ServerActiveDirectoryAdministratorTest.cs" />
       <Compile Include="ScenarioTests\ServerCommunicationLinkCrudTests.cs" />
@@ -976,7 +975,7 @@
       <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.RecommendedElasticPoolTests\ListRecommendedElasticPools.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ElasticJobAgentCrudTests\TestAgentCreate.json">
+      <!-- <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ElasticJobAgentCrudTests\TestAgentCreate.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ElasticJobAgentCrudTests\TestAgentUpdate.json">
@@ -1056,8 +1055,7 @@
       </None>
       <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ElasticJobTargetGroupCrudTests\TestTargetGroupRemove.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-
+      </None> -->
       <None Include="SessionRecords\Microsoft.Azure.Commands.Sql.Test.ScenarioTests.ServerActiveDirectoryAdministratorTest\TestServerActiveDirectoryAdministratorCRUD.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
