--- a/src/ResourceManager/Consumption/Commands.Consumption.Test/packages.config
+++ b/src/ResourceManager/Consumption/Commands.Consumption.Test/packages.config
@@ -6,6 +6,7 @@
   <package id="Microsoft.Azure.Gallery" version="2.6.2-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Authorization" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Azure.Management.Consumption" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Azure.Management.ResourceManager.Fluent" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.Azure.Management.Resources" version="2.20.0-preview" targetFramework="net45" />
   <package id="Microsoft.Azure.Test.Framework" version="1.0.6179.26854-prerelease" targetFramework="net45" />
   <package id="Microsoft.Azure.Test.HttpRecorder" version="1.6.7-preview" targetFramework="net45" />
@@ -14,7 +15,9 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.28.3" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.2.9-preview" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.11" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.12" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure.Authentication" version="2.3.2" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure.TestFramework" version="1.5.1-preview" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.Management" version="4.0.1" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
