--- a/src/ResourceManager/Common/Commands.ResourceManager.Common/Commands.ResourceManager.Common.csproj
+++ b/src/ResourceManager/Common/Commands.ResourceManager.Common/Commands.ResourceManager.Common.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="AccessTokenExtensions.cs" />
     <Compile Include="ArgumentCompleters\PSArgumentCompleter.cs" />
+    <Compile Include="ArgumentCompleters\ResourceIdCompleter.cs" />
     <Compile Include="ArgumentCompleters\ResourceTypeCompleter.cs" />
     <Compile Include="ArgumentCompleters\ScopeCompleter.cs" />
     <Compile Include="AzureRmCmdlet.cs" />
