--- a/src/ResourceManager/TrafficManager/Commands.TrafficManager2/packages.config
+++ b/src/ResourceManager/TrafficManager/Commands.TrafficManager2/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Azure.Management.TrafficManager" version="2.3.0-preview" targetFramework="net452" />
+  <package id="Microsoft.Azure.Management.TrafficManager" version="2.4.0-preview" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.4.0" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.4.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
 </packages>
