--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -193,6 +193,87 @@
       <Link>AzureRM.Resources.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="help\Add-AzureRmADGroupMember.md" />
+    <None Include="help\AzureRM.Resources.md" />
+    <None Include="help\Export-AzureRmResourceGroup.md" />
+    <None Include="help\Get-AzureRmADAppCredential.md" />
+    <None Include="help\Get-AzureRmADApplication.md" />
+    <None Include="help\Get-AzureRmADGroup.md" />
+    <None Include="help\Get-AzureRmADGroupMember.md" />
+    <None Include="help\Get-AzureRmADServicePrincipal.md" />
+    <None Include="help\Get-AzureRmADSpCredential.md" />
+    <None Include="help\Get-AzureRmADUser.md" />
+    <None Include="help\Get-AzureRmLocation.md" />
+    <None Include="help\Get-AzureRmManagedApplication.md" />
+    <None Include="help\Get-AzureRmManagedApplicationDefinition.md" />
+    <None Include="help\Get-AzureRmPolicyAssignment.md" />
+    <None Include="help\Get-AzureRmPolicyDefinition.md" />
+    <None Include="help\Get-AzureRmPolicySetDefinition.md" />
+    <None Include="help\Get-AzureRmProviderFeature.md" />
+    <None Include="help\Get-AzureRmProviderOperation.md" />
+    <None Include="help\Get-AzureRmResource.md" />
+    <None Include="help\Get-AzureRmResourceGroup.md" />
+    <None Include="help\Get-AzureRmResourceGroupDeployment.md" />
+    <None Include="help\Get-AzureRmResourceGroupDeploymentOperation.md" />
+    <None Include="help\Get-AzureRmResourceLock.md" />
+    <None Include="help\Get-AzureRmResourceProvider.md" />
+    <None Include="help\Get-AzureRmRoleAssignment.md" />
+    <None Include="help\Get-AzureRmRoleDefinition.md" />
+    <None Include="help\Invoke-AzureRmResourceAction.md" />
+    <None Include="help\Move-AzureRmResource.md" />
+    <None Include="help\New-AzureRmADAppCredential.md" />
+    <None Include="help\New-AzureRmADApplication.md" />
+    <None Include="help\New-AzureRmADGroup.md" />
+    <None Include="help\New-AzureRmADServicePrincipal.md" />
+    <None Include="help\New-AzureRmADSpCredential.md" />
+    <None Include="help\New-AzureRmADUser.md" />
+    <None Include="help\New-AzureRmManagedApplication.md" />
+    <None Include="help\New-AzureRmManagedApplicationDefinition.md" />
+    <None Include="help\New-AzureRmPolicyAssignment.md" />
+    <None Include="help\New-AzureRmPolicyDefinition.md" />
+    <None Include="help\New-AzureRmPolicySetDefinition.md" />
+    <None Include="help\New-AzureRmResource.md" />
+    <None Include="help\New-AzureRmResourceGroup.md" />
+    <None Include="help\New-AzureRmResourceGroupDeployment.md" />
+    <None Include="help\New-AzureRmResourceLock.md" />
+    <None Include="help\New-AzureRmRoleAssignment.md" />
+    <None Include="help\New-AzureRmRoleDefinition.md" />
+    <None Include="help\Register-AzureRmProviderFeature.md" />
+    <None Include="help\Register-AzureRmResourceProvider.md" />
+    <None Include="help\Remove-AzureRmADAppCredential.md" />
+    <None Include="help\Remove-AzureRmADApplication.md" />
+    <None Include="help\Remove-AzureRmADGroup.md" />
+    <None Include="help\Remove-AzureRmADGroupMember.md" />
+    <None Include="help\Remove-AzureRmADServicePrincipal.md" />
+    <None Include="help\Remove-AzureRmADSpCredential.md" />
+    <None Include="help\Remove-AzureRmADUser.md" />
+    <None Include="help\Remove-AzureRmManagedApplication.md" />
+    <None Include="help\Remove-AzureRmManagedApplicationDefinition.md" />
+    <None Include="help\Remove-AzureRmPolicyAssignment.md" />
+    <None Include="help\Remove-AzureRmPolicyDefinition.md" />
+    <None Include="help\Remove-AzureRmPolicySetDefinition.md" />
+    <None Include="help\Remove-AzureRmResource.md" />
+    <None Include="help\Remove-AzureRmResourceGroup.md" />
+    <None Include="help\Remove-AzureRmResourceGroupDeployment.md" />
+    <None Include="help\Remove-AzureRmResourceLock.md" />
+    <None Include="help\Remove-AzureRmRoleAssignment.md" />
+    <None Include="help\Remove-AzureRmRoleDefinition.md" />
+    <None Include="help\Save-AzureRmResourceGroupDeploymentTemplate.md" />
+    <None Include="help\Set-AzureRmManagedApplication.md" />
+    <None Include="help\Set-AzureRmManagedApplicationDefinition.md" />
+    <None Include="help\Set-AzureRmPolicyAssignment.md" />
+    <None Include="help\Set-AzureRmPolicyDefinition.md" />
+    <None Include="help\Set-AzureRmPolicySetDefinition.md" />
+    <None Include="help\Set-AzureRmResource.md" />
+    <None Include="help\Set-AzureRmResourceGroup.md" />
+    <None Include="help\Set-AzureRmResourceLock.md" />
+    <None Include="help\Set-AzureRmRoleDefinition.md" />
+    <None Include="help\Stop-AzureRmResourceGroupDeployment.md" />
+    <None Include="help\Test-AzureRmResourceGroupDeployment.md" />
+    <None Include="help\Unregister-AzureRmResourceProvider.md" />
+    <None Include="help\Update-AzureRmADApplication.md" />
+    <None Include="help\Update-AzureRmADServicePrincipal.md" />
+    <None Include="help\Update-AzureRmADUser.md" />
     <None Include="MSSharedLibKey.snk" />
     <None Include="packages.config" />
     <None Include="StartupScripts\*.ps1">
