--- a/TestMappings.json
+++ b/TestMappings.json
@@ -143,6 +143,9 @@
     ".\\src\\ResourceManager\\RecoveryServices\\Commands.RecoveryServices.Backup.Test\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServices.Backup.Test.dll",
     ".\\src\\ResourceManager\\RecoveryServices\\Commands.RecoveryServices.Test\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServicesArm.Test.dll"
   ],
+  "src/ResourceManager/RecoveryServices.SiteRecovery/": [
+    ".\\src\\ResourceManager\\RecoveryServices.SiteRecovery\\Commands.RecoveryServices.SiteRecovery\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServices.SiteRecovery.Test.dll"
+  ],
   "src/ResourceManager/RedisCache/": [
     ".\\src\\ResourceManager\\RedisCache\\Commands.RedisCache.Test\\bin\\Debug\\Microsoft.Azure.Commands.RedisCache.Test.dll"
   ],
