[Monitor] Powershell for SDK version 0.19.0-preview

--- a/src/ResourceManager/Insights/Commands.Insights.Test/Commands.Insights.Test.csproj
+++ b/src/ResourceManager/Insights/Commands.Insights.Test/Commands.Insights.Test.csproj
@@ -155,6 +155,7 @@
     <Compile Include="LogProfiles\RemoveAzureRmLogProfileTests.cs" />
     <Compile Include="Metrics\GetAzureRmMetricDefinitionTests.cs" />
     <Compile Include="Metrics\GetAzureRmMetricTests.cs" />
+    <Compile Include="Metrics\NewAzureRmMetricFilterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioTests\ActivityLogAlertsTests.cs" />
     <Compile Include="ScenarioTests\ActionGroupsTests.cs" />
