--- a/NuGet.config
+++ b/NuGet.config
@@ -7,6 +7,8 @@
     <add key="powershell-core" value="https://powershell.myget.org/F/powershell-core/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
+    <add key="local-feed" value="true" />
     <add key="dotnet-core" value="true" />
+    <add key="powershell-core" value="true" />
   </disabledPackageSources>
 </configuration>
