--- a/TestMappings.json
+++ b/TestMappings.json
@@ -144,7 +144,7 @@
     ".\\src\\ResourceManager\\RecoveryServices\\Commands.RecoveryServices.Test\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServicesArm.Test.dll"
   ],
   "src/ResourceManager/RecoveryServices.SiteRecovery/": [
-    ".\\src\\ResourceManager\\RecoveryServices.SiteRecovery\\Commands.RecoveryServices.SiteRecovery\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServices.SiteRecovery.Test.dll"
+    ".\\src\\ResourceManager\\RecoveryServices.SiteRecovery\\Commands.RecoveryServices.SiteRecovery.Test\\bin\\Debug\\Microsoft.Azure.Commands.RecoveryServices.SiteRecovery.Test.dll"
   ],
   "src/ResourceManager/RedisCache/": [
     ".\\src\\ResourceManager\\RedisCache\\Commands.RedisCache.Test\\bin\\Debug\\Microsoft.Azure.Commands.RedisCache.Test.dll"
