--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -64,10 +64,9 @@
 			AppDomains="true"
 			ShadowCopy="false"
 			ParallelizeTestCollections="false"
-			ParallelizeAssemblies="true"
+			ParallelizeAssemblies="false"
 			IncludeTraits="AcceptanceType=CheckIn"
 			Html="$(TestOutputDirectory)\AzurePowershellTestResults.html"
-			MaxParallelThreads="10"
 			DiagnosticMessages="false"
 			ContinueOnError="false"
 			Condition=" @(XUnitTests) != '' "/>
@@ -82,10 +81,9 @@
 			AppDomains="true"
 			ShadowCopy="false"
 			ParallelizeTestCollections="false"
-			ParallelizeAssemblies="true"
+			ParallelizeAssemblies="false"
 			ExcludeTraits="RunType=LiveOnly;AcceptanceType=CheckIn"
 			Html="$(TestOutputDirectory)\AzurePowershellAllTestResults.html"
-			MaxParallelThreads="10"
 			DiagnosticMessages="false"
 			ContinueOnError="false"
 			Condition=" @(XUnitTests) != '' "/>
