--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,8 @@ pingme.txt
 groupMapping*.json
 /tools/index.json
 /Package/index.json
+/tools/outputtypes.json
+/Package/outputtypes.json
 
 *.msi
 *.wixpdb
