[Monitor] Powershell for SDK version 0.19.0-preview

--- a/src/ResourceManager/Insights/Commands.Insights/Commands.Insights.csproj
+++ b/src/ResourceManager/Insights/Commands.Insights/Commands.Insights.csproj
@@ -197,7 +197,7 @@
     <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\AzureRM.Insights.psd1">
+    <None Include="AzureRM.Insights.psd1">
       <Link>AzureRM.Insights.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
