--- a/src/ResourceManager/DevSpaces/Commands.DevSpaces/Commands.DevSpaces.csproj
+++ b/src/ResourceManager/DevSpaces/Commands.DevSpaces/Commands.DevSpaces.csproj
@@ -90,7 +90,7 @@
     <Compile Include="Utils\ConversionUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\AzureRM.DevSpaces.psd1">
+    <None Include="AzureRM.DevSpaces.psd1">
       <Link>AzureRM.DevSpaces.psd1</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
