--- a/AzurePowershell.Test.targets
+++ b/AzurePowershell.Test.targets
@@ -64,9 +64,10 @@
 			AppDomains="true"
 			ShadowCopy="false"
 			ParallelizeTestCollections="false"
-			ParallelizeAssemblies="false"
+			ParallelizeAssemblies="true"
 			IncludeTraits="AcceptanceType=CheckIn"
 			Html="$(TestOutputDirectory)\AzurePowershellTestResults.html"
+			MaxParallelThreads="10"
 			DiagnosticMessages="false"
 			ContinueOnError="false"
 			Condition=" @(XUnitTests) != '' "/>
@@ -81,9 +82,10 @@
 			AppDomains="true"
 			ShadowCopy="false"
 			ParallelizeTestCollections="false"
-			ParallelizeAssemblies="false"
+			ParallelizeAssemblies="true"
 			ExcludeTraits="RunType=LiveOnly;AcceptanceType=CheckIn"
 			Html="$(TestOutputDirectory)\AzurePowershellAllTestResults.html"
+			MaxParallelThreads="10"
 			DiagnosticMessages="false"
 			ContinueOnError="false"
 			Condition=" @(XUnitTests) != '' "/>
