--- a/src/ResourceManager/IotHub/Commands.IotHub/Commands.IotHub.csproj
+++ b/src/ResourceManager/IotHub/Commands.IotHub/Commands.IotHub.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IotHub\Routing\GetAzureRmIotHubRoutingEndpoint.cs" />
     <Compile Include="IotHub\Routing\RemoveAzureRmIotHubRoute.cs" />
     <Compile Include="IotHub\Routing\RemoveAzureRmIotHubRoutingEndpoint.cs" />
+    <Compile Include="IotHub\Routing\TestAzureRmIotHubRoute.cs" />
     <Compile Include="IotHub\Routing\UpdateAzureRmIotHubRoute.cs" />
     <Compile Include="IotHub\SetAzureRmIotHub.cs" />
     <Compile Include="IotHub\SetAzureRmIotHubVerifiedCertificate.cs" />
@@ -98,6 +99,9 @@
     <Compile Include="Models\PSMessagingEndpointProperties.cs" />
     <Compile Include="Models\PSOperationsMonitoringProperties.cs" />
     <Compile Include="Models\PSFallbackRouteProperties.cs" />
+    <Compile Include="Models\PSRouteCompilationError.cs" />
+    <Compile Include="Models\PSRouteErrorPosition.cs" />
+    <Compile Include="Models\PSRouteErrorRange.cs" />
     <Compile Include="Models\PSRoutingCustomEndpoint.cs" />
     <Compile Include="Models\PSRoutingServiceBusQueueEndpointProperties.cs" />
     <Compile Include="Models\PSRoutingProperties.cs" />
@@ -112,6 +116,8 @@
     <Compile Include="Models\PSSharedAccessSignatureAuthorizationRule.cs" />
     <Compile Include="Models\PSStorageEndpointProperties.cs" />
     <Compile Include="Models\PSTagsResource.cs" />
+    <Compile Include="Models\PSTestRouteResult.cs" />
+    <Compile Include="Models\PSTestRouteResultDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
