--- a/src/ResourceManager/Reservations/Commands.Reservations.Test/Commands.Reservations.Test.csproj
+++ b/src/ResourceManager/Reservations/Commands.Reservations.Test/Commands.Reservations.Test.csproj
@@ -43,7 +43,7 @@
       <HintPath>..\..\..\packages\Microsoft.Azure.Gallery.2.6.2-preview\lib\net40\Microsoft.Azure.Gallery.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.Authorization">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.2.8.0-preview\lib\net452\Microsoft.Azure.Management.Authorization.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.1.0.0\lib\net40\Microsoft.Azure.Management.Authorization.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.Reservations">
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.Reservations.1.8.0-preview\lib\net452\Microsoft.Azure.Management.Reservations.dll</HintPath>
