--- a/src/ResourceManager/DevSpaces/Commands.DevSpaces.Test/Commands.DevSpaces.Test.csproj
+++ b/src/ResourceManager/DevSpaces/Commands.DevSpaces.Test/Commands.DevSpaces.Test.csproj
@@ -37,9 +37,8 @@
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.Authorization.2.0.0\lib\net40\Microsoft.Azure.Management.Authorization.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Microsoft.Azure.Management.DevSpaces">
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.DevSpaces.1.0.0\lib\net452\Microsoft.Azure.Management.DevSpaces.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Microsoft.Azure.Management.DevSpaces, Version=0.9.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.DevSpaces.0.9.0-preview\lib\net452\Microsoft.Azure.Management.DevSpaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.ResourceManager, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Microsoft.Azure.Management.ResourceManager.1.6.0-preview\lib\net452\Microsoft.Azure.Management.ResourceManager.dll</HintPath>
